# istos

./: .gitignore  CLAUDE.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  author.py  book.py  chapter.py  edge.py  topic.py  verse.py  verse_text.py  verse_token.py
backend/app/routers/: books.py  graph.py  search.py  verses.py
backend/app/schemas/: __init__.py  book.py  edge.py  graph.py  verse.py
backend/etl/: download.py  load.py  pipeline.py  transform.py
backend/etl/edges/: authorial.py  citational.py  linguistic.py
backend/etl/sources/: bsb.py  delitzsch.py  lxx.py  morphgnt.py  openbible.py  oshb.py
docs/: api.md  architecture.md  data-model.md  data-sources.md  development.md  embeddings.md  etl-pipeline.md  graph-traversal.md
